[package]
name = "mt_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
luajit = "0.1.1"

# slightly optimise our code
[profile.dev]
opt-level = 1

# highly optimise bevy, etc deps
[profile.dev.package."*"]
opt-level = 3
